# IntersectionQA

./: .env  .gitignore  AGENTS.md  README.md  benchmark-task-spec.md  epics-and-stories.md  epics-and-stories.yaml  generation_policy.md  implementation-complexity-priority-matrix.md  label_rules.md  main.py  overnight-task.md  overnight_task.md  paper-spec.md  pyproject.toml  schema.md  useful-implementation-optimization.md  using-cadevolve-dataet-export.md  using-cadevolve-dataset-export.md
.agents/skills/run-experiments/: SKILL.md
.agents/skills/run-experiments/agents/: openai.yaml
configs/: intersectionedit_grpo_pilot.yaml  orchestration_smoke.yaml  overnight_experiment_suite.yaml  repair_smoke.yaml  repair_tiny_validation.yaml  smoke.yaml  text_finetune.yaml
docs/: dataset_split_framing.md  experiment_execution_runbook.md  qwen3p5-4b-tuning.md  text_finetune_runbook.md
docs/experiments/: apr-25-26-qwen3p5-4b-intersectionedit-grpo.md  apr-25-qwen3p5-4b-intersectionqa-sft.md  apr-27-28-qwen3p5-4b-native-reasoning-sft-length.md  apr-27-openrouter-native-reasoning-distill.md  apr-27-qwen3p5-4b-intersectionqa-answer-sft.md  qwen3p5-4b-tuning.md
docs/old_overnight_tasks/: apr-26-overnight-task.md  apr-27-overnight-task.md  human-wirtten-apr-27-overnight-task.md
docs/old_overnight_tasks.md/: apr-26-overnight-task.md
intersectionqa/: __init__.py  config.py  enums.py  experiment_runner.py  experiments.py  hashing.py  logging.py  pipeline.py  schema.py  sharding.py
intersectionqa/evaluation/: __init__.py  aabb.py  comparison.py  edit_difficulty.py  failure_analysis.py  metrics.py  model_runner.py  obb.py  parsing.py  repair.py  rewards.py  tool_assisted.py
intersectionqa/export/: __init__.py  balance.py  dataset_card.py  jsonl.py  parquet.py
intersectionqa/generation/: __init__.py  assembly.py  cadevolve_assemblies.py  geometry_cache.py
intersectionqa/geometry/: __init__.py  bbox.py  cadquery_exec.py  labels.py  transforms.py
intersectionqa/prompts/: __init__.py  binary.py  buckets.py  common.py  counterfactual.py  fit.py  materialize.py  ranking.py  relation.py  repair.py
intersectionqa/sources/: __init__.py  base.py  cadevolve.py  synthetic.py  validation.py  validation_cache.py
intersectionqa/splits/: __init__.py  grouped.py
intersectionqa/training/: __init__.py  prompt_features.py  reasoning_traces.py  sampling.py
notebooks/: qwen3_5_4b_vision_intersectionqa.ipynb
scripts/: __init__.py  add_counterfactual_train_rows.py  audit_answer_balance.py  audit_leakage.py  audit_reproducibility.py  baseline_comparison_table.py  build_release_candidate.py  dataset_stats.py  evaluate_baseline.py  evaluate_predictions.py  evaluate_repair_predictions.py  evaluate_text_model.py  evaluate_tool_assisted.py  evaluate_zero_shot.py  export_row_artifacts.py  failure_case_analysis.py  generate_dataset.py  generate_sharded_dataset.py  monitor_experiment_run.py  prepare_cadevolve_sources.py  prepare_intersectionedit_training_splits.py  rebalance_pairwise_rows.py  redistribute_dataset_splits.py  render_row_artifacts.py  run_experiment_suite.py  text_grpo_smoke.py  text_grpo_train_unsloth.py  text_sft_smoke.py  text_sft_train.py  text_sft_train_unsloth.py  upload_run_artifacts.py  validate_dataset.py
scripts/dataset/: balance_dataset_classes.py  dataset_stats.py  download_hf_dataset.py  export_row_artifacts.py  generate_dataset.py  generate_resumable_dataset.py  inspect_example.py  prepare_cadevolve_sources.py  redistribute_dataset_splits.py  render_row_artifacts.py  write_dataset_card.py
scripts/dataset/internal/: row_artifacts.py
scripts/devops/: bootstrap_vast_instance.sh  vast_wait_eval_and_cftrain.sh
scripts/evaluation/: baseline_comparison_table.py  evaluate_baseline.py  evaluate_predictions.py  evaluate_repair_predictions.py  failure_case_analysis.py
scripts/evaluation/internal/: predictions.py
scripts/experiments/: build_experiment_report.py  run_experiment_suite.py
scripts/publishing/: upload_run_artifacts.py
scripts/training/: distill_reasoning_openrouter.py  evaluate_text_model.py  prepare_balanced_reasoning_sft_canary_dataset.py  prepare_native_reasoning_sft_datasets.py  prepare_reasoning_sft_dataset.py  prepare_rejection_sampled_reasoning_sft_dataset.py  text_sft_train_unsloth.py
specs/: benchmark-family.md  benchmark-task-spec.md  generation_policy.md  intersectionedit-full-spec.md  intersectionedit-task-spec.md  label_rules.md  paper-spec.md  research-experiment-spec.md  reviewer-readiness-checklist.md  schema.md  using-cadevolve-dataset-export.md
tests/: test_aabb.py  test_audit_leakage_script.py  test_audit_reproducibility_script.py  test_baseline_comparison_table.py  test_build_release_candidate_script.py  test_cadevolve_generation.py  test_cadevolve_loader.py  test_cadquery_exec.py  test_config.py  test_dataset_card.py  test_dataset_stats_script.py  test_distill_reasoning_openrouter.py  test_evaluate_predictions_script.py  test_evaluate_repair_predictions_script.py  test_evaluate_text_model.py  test_evaluate_zero_shot_script.py  test_experiments.py  test_export.py  test_export_row_artifacts.py  test_failure_case_analysis_script.py  test_labels.py  test_metrics.py  test_model_runner.py  test_prepare_balanced_reasoning_sft_canary_dataset.py  test_prepare_cadevolve_sources_script.py  test_prepare_native_reasoning_sft_datasets.py  test_prompt_features.py  test_prompts.py  test_reasoning_traces.py  test_render_row_artifacts.py  test_rewards.py  test_schema.py  test_sharding.py  test_source_validation.py  test_splits.py  test_text_sft_train_unsloth.py  test_tool_assisted.py  test_training_sampling.py  test_validation_cache.py
(+1 files in other folders)
