[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "intersectionqa"
version = "0.1.0"
description = "Code-only CAD spatial reasoning benchmark tooling."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cadquery>=2.7.0",
    "huggingface-hub>=1.11.0",
    "jsonschema>=4.26.0",
    "numpy>=2.4.4",
    "psutil>=7.2.2",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.scripts]
intersectionqa-generate = "scripts.generate_dataset:main"
intersectionqa-validate = "scripts.validate_dataset:main"
intersectionqa-aabb-baseline = "scripts.evaluate_baseline:main"
intersectionqa-evaluate-predictions = "scripts.evaluate_predictions:main"
intersectionqa-audit-leakage = "scripts.audit_leakage:main"
intersectionqa-stats = "scripts.dataset_stats:main"
intersectionqa-inspect = "scripts.inspect_example:main"

[tool.setuptools.packages.find]
include = ["intersectionqa*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
