[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "intersectionqa"
version = "0.1.0"
description = "Code-only CAD spatial reasoning benchmark tooling."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cadquery>=2.7.0",
    "huggingface-hub>=1.11.0",
    "modal>=1.4.2",
    "numpy>=2.4.4",
    "psutil>=7.2.2",
    "pyarrow>=24.0.0",
    "pydantic>=2.0",
    "python-dotenv>=1.2.2",
    "pyvista>=0.47.3",
    "pyyaml>=6.0",
]

[project.scripts]
intersectionqa-generate = "scripts.dataset.generate_dataset:main"
intersectionqa-validate = "scripts.dataset.validate_dataset:main"
intersectionqa-aabb-baseline = "scripts.evaluation.evaluate_baseline:main"
intersectionqa-evaluate-predictions = "scripts.evaluation.evaluate_predictions:main"
intersectionqa-evaluate-repair-predictions = "scripts.evaluation.evaluate_repair_predictions:main"
intersectionqa-evaluate-zero-shot = "scripts.evaluation.evaluate_zero_shot:main"
intersectionqa-evaluate-tool-assisted = "scripts.evaluation.evaluate_tool_assisted:main"
intersectionqa-audit-leakage = "scripts.dataset.audit_leakage:main"
intersectionqa-audit-reproducibility = "scripts.dataset.audit_reproducibility:main"
intersectionqa-stats = "scripts.dataset.dataset_stats:main"
intersectionqa-write-dataset-card = "scripts.dataset.write_dataset_card:main"
intersectionqa-inspect = "scripts.dataset.inspect_example:main"
intersectionqa-export-row-artifacts = "scripts.dataset.export_row_artifacts:main"
intersectionqa-render-row-artifacts = "scripts.dataset.render_row_artifacts:main"
intersectionqa-prepare-cadevolve-sources = "scripts.dataset.prepare_cadevolve_sources:main"
intersectionqa-baseline-comparison-table = "scripts.evaluation.baseline_comparison_table:main"
intersectionqa-failure-case-analysis = "scripts.evaluation.failure_case_analysis:main"
intersectionqa-build-release-candidate = "scripts.dataset.build_release_candidate:main"
intersectionqa-run-experiment-suite = "scripts.experiments.run_experiment_suite:main"
intersectionqa-upload-run-artifacts = "scripts.publishing.upload_run_artifacts:main"
intersectionqa-monitor-experiment-run = "scripts.experiments.monitor_experiment_run:main"
intersectionqa-build-experiment-report = "scripts.experiments.build_experiment_report:main"

[tool.setuptools.packages.find]
include = ["intersectionqa*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "uv>=0.11.7",
]
